Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49455

App crashes when using QtBluetooth in DLL

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.6.0 RC
    • 5.5.1
    • None
    • Windows 7 x64

      I'm having a library for all communication stuff, including Bluetooth.
      Any application trying to use this library will crash during startup.
      I'm not expecting the functionality to work on Windows7, but I was able to run the Application on 5.4, but 5.5 will fail completely.
      On OSX the same code works fine, also (slightly modified) on 5.4.

      The crash happens inside LocalDeviceRegisterMetaTypes() when trying to register the first MetaType "QBluetoothLocalDevice::HostMode", while getting objectClassName().

      Screenshot attached.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ablasche Alex Blasche
            SJungherz Steffen Jungherz
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes