src/bluetooth/qbluetoothlocaldevice_p.h
@@ -83,6 +83,8 @@ QT_END_NAMESPACE
 
 QT_BEGIN_NAMESPACE
 
+extern void registerQBluetoothLocalDeviceMetaType();
+
 class QBluetoothAddress;
 
 #ifdef QT_ANDROID_BLUETOOTH
